# NLI_for_DB_visualisation

./: .env.example  .gitignore  README.md  docker-compose.yml  testing.txt
init_scripts/: init.sql
py-server/: pyproject.toml
py-server/py_server/llmservice/: main.py
py-server/py_server/repository/: main.py
server/: .gitignore  DockerFile  llm.py  main.py  mongo.py  pyproject.toml  repository.py  requirements.txt  visualization.py
server/py_server/: main.py  temp_index.py
server/py_server/llmservice/: main.py
server/py_server/repository/: docker-compose.yml  main.py
server/py_server/visualization/: main.py  two_dim_fig.py
server/tests/: finding_intent.ipynb
server/tests/intent_data/: sql_intents.csv  test.csv  validate.csv
