[tool.poetry]
name = "py-server"
version = "0.1.0"
description = ""
authors = ["Ashmin Jayson <ashminjayson10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11, <3.13"
langchain = "^0.0.329"
openai = "^0.28.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
