[tool.poetry]
name = "py-server"
version = "0.1.0"
description = ""
authors = ["Ashmin Jayson <ashminjayson10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11, <3.13"
docker = "^6.1.3"
compose = "^1.5.0"
mysql-connector-python = "^8.2.0"
langchain = "^0.0.332"
python-dotenv = "^1.0.0"
openai = "0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
